--- a/src/app/components/home/home-admin/home-admin.component.html
+++ b/src/app/components/home/home-admin/home-admin.component.html
@@ -6,8 +6,12 @@
       <!-- Left burger icon for drawer navbar -->
       <mat-icon class="burger-icon" (click)="toggleSidebar()">menu</mat-icon>
 
-      <!-- Right profile icon -->
-      <mat-icon class="profile-icon" routerLink="/login">account_circle</mat-icon>
+      <!-- Right profile, notifications, and messages icons -->
+      <div class="header-icons">
+        <mat-icon class="notifications-icon" (click)="openNotifications()">notifications</mat-icon>
+        <mat-icon class="messages-icon" routerLink="/messages">message</mat-icon>
+        <mat-icon class="profile-icon" routerLink="/login">account_circle</mat-icon>
+      </div>
 
       <!-- Centered logo -->
       <div class="logo-container">
@@ -27,6 +31,7 @@
   </div>
 </header>
 <app-drawer-navbar-admin [isSidebarOpen]="isSidebarOpen"></app-drawer-navbar-admin>
+<app-notifications [isNotificationsOpen]="isNotificationsOpen"></app-notifications>
 
 <app-hottest-events></app-hottest-events>
 <app-our-events></app-our-events>
