--- a/src/app/components/home/home-admin/home-admin.component.css
+++ b/src/app/components/home/home-admin/home-admin.component.css
@@ -44,30 +44,50 @@ header {
   padding: 5px;
 }
 
-/* Header icons container (profile, notifications, messages) */
 .header-icons {
   position: absolute;
   top: 20px;
   right: 20px;
   display: flex;
   align-items: center;
-  gap: 15px; /* Space between icons */
+  gap: 15px;
 }
 
-/* Profile icon */
-.profile-icon, .notifications-icon, .messages-icon {
+/* Poseban kontejner za notifikacije */
+.notifications-container {
+  position: relative;  /* Važno: ovo omogućava da se .unread-count pozicionira u odnosu na ovu div-u */
+  display: inline-flex; /* Da bi ikonice ostale u istom redu */
+}
+
+.notifications-icon,
+.messages-icon,
+.profile-icon {
   font-size: 30px;
   cursor: pointer;
   color: #523D35;
-  z-index: 3;  /* Ensure it stays on top of other elements */
+  z-index: 2;
   padding: 5px;
 }
 
-.profile-icon:hover,
 .notifications-icon:hover,
-.messages-icon:hover {
-  color: #d9d9d9; /* Change color on hover for all icons */
+.messages-icon:hover,
+.profile-icon:hover {
+  color: #d9d9d9;
 }
+
+/* Nepročitane notifikacije - kružić sa brojem */
+.unread-count {
+  position: absolute;
+  top: -5px;
+  right: -5px;
+  background-color: white;
+  color: #d9d9d9;
+  border-radius: 50%;
+  padding: 3px 6px;
+  font-size: 12px;
+  z-index: 3;
+}
+
 
 /* Logo container */
 .logo-container {
