--- a/src/app/components/admin-comments/admin-comments.component.html
+++ b/src/app/components/admin-comments/admin-comments.component.html
@@ -16,6 +16,7 @@
           <i class="fas fa-star" *ngFor="let star of createStarsArray(comment.rating)"></i>
         </div>
         <p class="review-text">{{ comment.content }}</p>
+        <p class="review-text">Service / product: {{ comment.solution }}</p>
         <p class="provider">Service and product provider: {{ comment.solutionProvider }}</p>
         <div class="actions">
           <button class="approve-btn" (click)="approveComment(comment)">✔ Approve</button>
