added book service button visibly only for user with event organizer role

--- a/src/app/offerings/service-details/service-details.component.html
+++ b/src/app/offerings/service-details/service-details.component.html
@@ -51,7 +51,9 @@
   </dl>
 </article>
 
-<button (click)="openReservationPopup()">Book Service</button>
+<button *ngIf="role === 'EventOrganizer'" (click)="openReservationPopup()">Book Service</button>
+
+
 <div class="modal" [class.show]="isPopupOpen">
   <div class="modal-content">
     <span class="close" (click)="closeReservationPopup()">&times;</span>
