--- a/src/app/components/registration/registration-spp/registration-spp.component.html
+++ b/src/app/components/registration/registration-spp/registration-spp.component.html
@@ -90,7 +90,7 @@
 
               <!-- Photo -->
               <div class="form-group">
-                <input id="photo" formControlName="photo" type="file" accept="image/*" />
+                <input id="photo" formControlName="file" type="file" accept="image/*" (change)="onFileSelected($event)" />
               </div>
 
               <!-- Submit Button -->
