--- a/src/app/components/registration/registration-spp/registration-spp.component.css
+++ b/src/app/components/registration/registration-spp/registration-spp.component.css
@@ -208,6 +208,7 @@ body {
   width: 100%; /* Full width of the form section */
   max-width: 600px; /* You can adjust max-width to your preference */
   margin: 0 auto;
+  z-index: 100;
 }
 
 /* Form Header (h2) */
@@ -284,4 +285,3 @@ a {
 a:hover {
   text-decoration: underline;
 }
-
