--- a/src/app/components/registration/successful/successful.component.css
+++ b/src/app/components/registration/successful/successful.component.css
@@ -1,5 +1,4 @@
 .modal {
-  font-family: 'Petrona', serif;
   position: fixed;
   top: 0;
   left: 0;
@@ -12,11 +11,27 @@
 }
 
 .modal-content {
+  font-family: 'Petrona', serif;
   background: #D9D9D9;
   padding: 20px;
   border-radius: 8px;
   text-align: center;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  color: #5a3e3e;
+}
+
+/* Modal overlay */
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Transparent black */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
 }
 
 button {
