--- a/src/app/components/drawers/drawer-navbar-provider/drawer-navbar-provider.component.html
+++ b/src/app/components/drawers/drawer-navbar-provider/drawer-navbar-provider.component.html
@@ -2,11 +2,11 @@
 <div class="sidebar" [class.open]="isSidebarOpen">
   <ul>
     <li>My services/products</li>
-    <li>Bookings</li>
+    <li (click)="toggleBookingsSidebar()">All Bookings</li>
+    <li (click)="toggleBookingRequestsSidebar()">Booking service requests</li>
     <li>Reviews and ratings</li>
     <li>Categories</li>
-    <li (click)="toggleBookingRequestsSidebar()">Booking service requests</li>
-
+    <li>Price list</li>
     <li (click)="toggleNotificationsSidebar()">Notifications</li>
     <li>Messages</li>
     <li>Log out</li>
@@ -15,3 +15,5 @@
 
 <app-notifications [isNotificationsOpen]="isNotificationsOpen"></app-notifications>
 <app-booking-service-requests [isBookingRequestsOpen] = "isBookingRequestsOpen"></app-booking-service-requests>
+<app-all-bookings-provider [isBookingsOpen] = "isBookingsOpen"></app-all-bookings-provider>
+
