--- a/src/app/components/drawers/drawer-navbar-guest/drawer-navbar-guest.component.html
+++ b/src/app/components/drawers/drawer-navbar-guest/drawer-navbar-guest.component.html
@@ -2,7 +2,8 @@
 <div class="sidebar" [class.open]="isSidebarOpen">
   <ul>
     <li>Home</li>
-    <li>Login</li>
-    <li>Register</li>
+    <li routerLink="/login">Login</li>
+    <li routerLink="/registration-eo">Register as event organizer</li>
+    <li routerLink="/registration-spp">Register as product and service provider</li>
   </ul>
 </div>
