fixed homepage to give all solutions

--- a/src/app/components/home/home-admin/home-admin.component.html
+++ b/src/app/components/home/home-admin/home-admin.component.html
@@ -37,9 +37,9 @@
 <app-notifications [isNotificationsOpen]="isNotificationsOpen"></app-notifications>
 
 <app-hottest-events></app-hottest-events>
-<app-our-events></app-our-events>
+<app-all-events></app-all-events>
 <div class="section-divider1"></div>
 <div class="section-divider2"></div>
 <app-hottest-services></app-hottest-services>
-<app-our-sevices></app-our-sevices>
+<app-all-sevices></app-all-sevices>
 <app-footer></app-footer>
