--- a/src/app/components/home/home-guest/home.component.html
+++ b/src/app/components/home/home-guest/home.component.html
@@ -30,9 +30,9 @@
 <app-drawer-navbar-guest [isSidebarOpen]="isSidebarOpen"></app-drawer-navbar-guest>
 
 <app-hottest-events></app-hottest-events>
-<app-our-events></app-our-events>
+<app-all-events></app-all-events>
 <div class="section-divider1"></div>
 <div class="section-divider2"></div>
 <app-hottest-services></app-hottest-services>
-<app-our-sevices></app-our-sevices>
+<app-all-sevices></app-all-sevices>
 <app-footer></app-footer>
