--- a/src/app/components/homepage/all-events/our-events.component.html
+++ b/src/app/components/homepage/all-events/our-events.component.html
@@ -1,6 +1,6 @@
 <div class="events-list-section">
   <div class="header-bar">
-    <h2 class="header-title">OUR EVENTS</h2>
+    <h2 class="header-title">ALL EVENTS</h2>
     <div class="search-filter">
       <div class="search-box">
         <input type="text" placeholder="Enter search credentials" class="search-input" [(ngModel)]="searchTerm" (input)="onSearch()" />
