--- a/src/app/components/homepage/hottest-events/hottest-events.component.html
+++ b/src/app/components/homepage/hottest-events/hottest-events.component.html
@@ -1,5 +1,5 @@
 <div class="events-section">
-  <h2 class="section-title">HOTTEST EVENTS</h2>
+  <h2 class="section-title">HOTTEST EVENTS IN YOUR TOWN</h2>
 
   <div class="carousel-wrapper">
     <div class="arrow left" (click)="prevSlide()">&#9664;</div>
