--- a/src/app/components/homepage/hottest-services/hottest-services.component.html
+++ b/src/app/components/homepage/hottest-services/hottest-services.component.html
@@ -1,5 +1,5 @@
 <div class="events-section">
-  <h2 class="section-title">HOTTEST SERVICES AND PRODUCTS</h2>
+  <h2 class="section-title">HOTTEST SERVICES AND PRODUCTS IN YOUR TOWN</h2>
 
   <div class="carousel-wrapper">
     <!-- Strelica za prethodni slajd -->
