--- a/src/app/components/profiles/provider-profile/provider-profile.component.html
+++ b/src/app/components/profiles/provider-profile/provider-profile.component.html
@@ -3,7 +3,7 @@
     <div class="header-overlay">
       <mat-icon class="burger-icon" (click)="toggleSidebar()">menu</mat-icon>
 
-      <mat-icon class="profile-icon" routerLink="/organizer-profile">account_circle</mat-icon>
+      <mat-icon class="profile-icon" routerLink="/provider-profile">account_circle</mat-icon>
 
       <div class="logo-container">
         <img class="logo">
@@ -14,7 +14,7 @@
       </div>
 
       <div class="nav-links">
-        <a href="/home-organizer">HOME</a> | <a href="organizer-profile">PROFILE</a> | <a href="#">SETTINGS</a>
+        <a href="/home-provider">HOME</a> | <a href="provider-profile">PROFILE</a> | <a href="#">SETTINGS</a>
       </div>
     </div>
   </div>
