--- a/src/app/components/profiles/info/info.component.css
+++ b/src/app/components/profiles/info/info.component.css
@@ -34,6 +34,45 @@
   margin-top: -10rem;
 }
 
+/* Carousel of photos for SPP */
+.photo-carousel {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  width: 200px;
+  height: 200px;
+}
+
+.carousel-btn {
+  background: rgba(255, 255, 255, 0.8);
+  border: none;
+  cursor: pointer;
+  padding: 0.5rem;
+  position: absolute;
+  top: 20%;
+  transform: translateY(-50%);
+  z-index: 2;
+}
+
+.carousel-btn.left {
+  left: -30px;
+}
+
+.carousel-btn.right {
+  right: -30px;
+}
+
+.carousel-btn i {
+  font-size: 1.5rem;
+  color: #523D35;
+}
+
+.carousel-btn:hover {
+  background: rgba(255, 255, 255, 1);
+}
+/* ---- */
+
 .edit-button {
   background: #fff;
   border: 0.1px solid #D9D9D9;
@@ -49,7 +88,25 @@
   font-family: 'Petrona', serif;
 }
 
+.edit-button-photos {
+  background: #fff;
+  border: 0.1px solid #D9D9D9;
+  cursor: pointer;
+  padding: 0.5rem 1rem;
+  position: absolute;
+  bottom: 15%;
+  left: 20%;
+  z-index: 2;
+  color: #523D35;
+  border-radius: 5px;
+  font-family: 'Petrona', serif;
+}
+
 .edit-button:hover {
+  background-color: #D9D9D9;
+}
+
+.edit-button-photos:hover {
   background-color: #D9D9D9;
 }
 
@@ -93,7 +150,7 @@
 .profile-actions {
   position: absolute; /* Allows precise positioning */
   top: 1rem; /* Aligns to the top of the container */
-  right: -10rem; /* Adds spacing from the right edge */
+  right: 0rem; /* Adds spacing from the right edge */
   display: flex; /* Enables flexbox for alignment */
   gap: 1rem; /* Adds spacing between buttons */
 }
