--- a/src/app/components/homepage/all-events/our-events.component.html
+++ b/src/app/components/homepage/all-events/our-events.component.html
@@ -56,7 +56,7 @@
         <p>{{ event.description }}</p>
         <small><span class="fas fa-location-pin"></span> {{ event.location }}</small><br />
         <small><span class="fas fa-calendar-alt"></span> from {{ event.startDate }} to {{ event.endDate }}</small><br /><br />
-        <button>View More</button>
+        <button [routerLink]="['/events', event.id]">View More</button>
       </div>
     </div>
   </div>
