--- a/src/app/components/homepage/hottest-events/hottest-events.component.html
+++ b/src/app/components/homepage/hottest-events/hottest-events.component.html
@@ -25,7 +25,7 @@
             </small>
             <br>
             <small><span class="fas fa-calendar-alt"></span> from {{ event.startDate }} to {{ event.endDate }}</small><br /><br />
-            <button class="view-more-btn">View More</button>
+            <button class="view-more-btn" [routerLink]="['/events', event.id]">View More</button>
           </div>
         </div>
       </div>
