added admin functionality for managing report requests

--- a/src/app/components/admin-comments/admin-comments.component.css
+++ b/src/app/components/admin-comments/admin-comments.component.css
@@ -115,11 +115,11 @@
 }
 
 .card .approve-btn {
-  color: #4caf50;
+  color: #523D35;
 }
 
 .card .delete-btn {
-  color: #f44336;
+  color: #523D35;
 }
 
 /* Overlay Styling */
