--- a/src/app/components/admin-reports/admin-reports.component.css
+++ b/src/app/components/admin-reports/admin-reports.component.css
@@ -95,12 +95,12 @@
 }
 
 .card .approve-btn {
-  background-color: #4CAF50;
+  background-color: #523D35;
   color: white;
 }
 
 .card .delete-btn {
-  background-color: #f44336;
+  background-color: #523D35;
   color: white;
 }
 
