--- a/src/app/components/profiles/view-provider-profile/view-provider-profile.component.html
+++ b/src/app/components/profiles/view-provider-profile/view-provider-profile.component.html
@@ -37,9 +37,10 @@
 
   <div class="profile-info">
     <h3>{{ user.companyName || 'User Name' }}</h3>
-    <p>Event Organizer</p>
+    <p>Service and product provider</p>
     <ul>
       <li><strong>Email:</strong> {{ user.email || 'No email available' }}</li>
+      <li><strong>Description:</strong>{{user.description || 'No description found' }}</li>
       <li><strong>Address:</strong> {{ user.address || 'No address provided' }}</li>
       <li><strong>City:</strong> {{ user.city || 'No city provided' }}</li>
       <li><strong>Phone number:</strong> {{ user.phoneNumber || 'No phone number' }}</li>
