--- a/src/app/components/profiles/view-organizer-profile/view-organizer-profile.component.html
+++ b/src/app/components/profiles/view-organizer-profile/view-organizer-profile.component.html
@@ -44,7 +44,7 @@
       <li><strong>City:</strong> {{ user.city || 'No city provided' }}</li>
       <li><strong>Phone number:</strong> {{ user.phoneNumber || 'No phone number' }}</li>
     </ul>
-    <div class="profile-actions">
+    <div class="profile-actions" *ngIf="loggedUserId !== null">
       <button class="report" (click)="openReportForm()">Report user</button>
       <button class="chat" (click)="toggleChat()">Chat with organizer</button>
     </div>
