--- a/src/app/components/registration/registration-spp/registration-spp.component.html
+++ b/src/app/components/registration/registration-spp/registration-spp.component.html
@@ -116,5 +116,6 @@
   [isVisible]="showModal"
   [modalTitle]="modalTitle"
   [message]="modalMessage"
+  [showOkButton]="showOkButton"
   (close)="closeModal()"
 ></app-successful>
